# flocking

./: .gitignore  flocking.cabal  stack.yaml
src/: Main.hs
