name:           flocking
version:        1.0.0
author:         Author name here
cabal-version:  1.12
build-type:     Simple

library
  build-depends: base >= 4.7 && <5, parsec, gloss >= 1.11 && < 1.14, gloss-juicy >= 0.2.3, containers, directory
  default-language: Haskell2010

executable flocking
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base >= 4.7 && <5, flocking, parsec, gloss >= 1.11 && < 1.14, gloss-juicy >= 0.2.3, directory, diagrams-lib, linear
